--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-langchain==0.0.353
-langchain-core==0.1.4
-tiktoken==0.5.2
-openai==1.6.0
-chromadb==0.3.29
-PyPDF2==3.0.1
-streamlit==1.29.0
+streamlit
+tensorflow
+keras
