--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 .fileextension filter=lfs diff=lfs merge=lfs -text
 Preprocessedimages filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
